openshift/deployment-open-notebook.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-notebook
  labels:
    app: open-notebook
    app.kubernetes.io/name: open-notebook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: open-notebook
  template:
    metadata:
      labels:
        app: open-notebook
        app.kubernetes.io/name: open-notebook
    spec:
      containers:
        - name: open-notebook
          image: lfnovo/open_notebook:v1-latest
          imagePullPolicy: Always
          ports:
            - name: http-ui
              containerPort: 8502
              protocol: TCP
            - name: http-api
              containerPort: 5055
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /app/data
          resources: {}
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: open-notebook-data
